change todo priority styling and fix sidebar layout on mobile

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,6 +8,7 @@
 	--secondary-text: #696868;
 	--hover-color: #eeeeee;
 	--sidebar-color: #fafafa;
+	--modal-color: rgba(0, 0, 0, 0.5);
 }
 
 /* ---------- FONTS ---------- */
@@ -53,7 +54,6 @@ button img {
 }
 
 .round label {
-	background-color: #fff;
 	border: 1px solid;
 	border-radius: 50%;
 	cursor: pointer;
@@ -62,6 +62,21 @@ button img {
 	position: absolute;
 	top: 0;
 	width: 20px;
+}
+
+.priority-high {
+	border-color: #cb3c34 !important;
+	background-color: #faebea;
+}
+
+.priority-medium {
+	border-color: #e87e0c !important;
+	background-color: #fdf2e6;
+}
+
+.priority-low {
+	border-color: #46cb34 !important;
+	background-color: #d0edce;
 }
 
 .round label:after {
@@ -84,7 +99,7 @@ button img {
 
 .round input[type='checkbox']:checked + label {
 	background-color: var(--main-text);
-	border-color: var(--main-text);
+	border-color: var(--main-text) !important;
 }
 
 .round input[type='checkbox']:checked + label:after {
@@ -284,7 +299,8 @@ main {
 	width: 100%;
 	height: 100%;
 	overflow: auto;
-	background-color: rgba(0, 0, 0, 0.5);
+	background-color: var(--modal-color);
+	padding: 0 2rem;
 }
 
 .modal-content {
@@ -357,7 +373,10 @@ main {
 /* ---------- MEDIA QUERIES ---------- */
 @media only screen and (max-width: 960px) {
 	.sidebar {
-		display: none;
+		position: absolute;
+		top: 44px;
+		bottom: 0;
+		z-index: 999;
 	}
 
 	.editor {
